# bitsy

./: CMakeLists.txt
src/: engine.cpp  engine.h  gorbitsa.hpp  main.cpp
